fixing_team_view

--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -121,62 +121,114 @@
                         id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
-                        <div class="team-container">
-                            <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
-                                        <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
-                                        <h7>Grace</h7> <h7 id="teaminfo">Lam</h7>
-                                        <p id="teaminfo">Project Lead</p>  
-                                        <p id="teaminfo">EECS, Business</p>
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <img src="../assets/img/pizza/icons/jasmine.svg" alt="Jasmine" />
-                                        <h7>Jasmine</h7> <p id="teaminfo">Chen</p>
-                                        <p id="teaminfo">Space Design</p>  
-                                        <p id="teaminfo">Architecture</p>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/neemarashidi/">
-                                        <img src="../assets/img/pizza/icons/neema.svg" alt="Neema" />
-                                        <a href="https://www.linkedin.com/in/neemarashidi/">
-                                            <h7>Neema</h7> <p id="teaminfo">Rashidi</p>
+                        <div class="web-team">
+                            <div class="team-container">
+                                <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
+                                            <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
+                                            <h7>Grace Lam</h7>
+                                            <p>Project Lead</p>  
+                                            <p>EECS, Business</p>
                                             </a>
-                                            <p id="teaminfo">Community Engagement</p>  
-                                            <p id="teaminfo">MCB</p>
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/natalie-deng">
-                                        <img src="../assets/img/pizza/icons/natalie (1).svg" alt="Natalie" />
-                                        <a href="https://www.linkedin.com/in/natalie-deng">
-                                            <h7>Natalie</h7> <p id="teaminfo">Deng</p>
+                                        </div>
+                                        <div class="col">
+                                            <img src="../assets/img/pizza/icons/jasmine.svg" alt="Jasmine" />
+                                            <h7>Jasmine Chen</h7>
+                                            <p>Space Design</p>  
+                                            <p>Architecture</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/neemarashidi/">
+                                            <img src="../assets/img/pizza/icons/neema.svg" alt="Neema" />
                                             </a>
-                                            <p id="teaminfo">Community Engagement</p>  
-                                            <p id="teaminfo">Political Economics</p>
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
-                                        <img src="../assets/img/pizza/icons/jake.svg" alt="Jake" />
-                                        <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
-                                            <h7>Jake</h7> <p id="teaminfo">Nuesca</p>
+                                            <a href="https://www.linkedin.com/in/neemarashidi/">
+                                                <h7>Neema Rashidi</h7>
+                                                </a>
+                                                <p>Community Engagement</p>  
+                                                <p>MCB</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/natalie-deng">
+                                            <img src="../assets/img/pizza/icons/natalie (1).svg" alt="Natalie" />
                                             </a>
-                                            <p id="teaminfo">Product Design</p>  
-                                            <p id="teaminfo">Mechanical Eng.</p>
-                                        </a>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/aryannair">
-                                        <img src="../assets/img/pizza/icons/aryan.svg" alt="Aryan" />
-                                        <a href="https://www.linkedin.com/in/aryannair">
-                                            <h7>Aryan</h7> <p id="teaminfo">Nair</p>
+                                            <a href="https://www.linkedin.com/in/natalie-deng">
+                                                <h7>Natalie Deng</h7>
+                                                </a>
+                                                <p>Community Engagement</p>  
+                                                <p>Political Economics</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
+                                            <img src="../assets/img/pizza/icons/jake.svg" alt="Jake" />
                                             </a>
-                                            <p id="teaminfo">Community Engagement</p>  
-                                            <p id="teaminfo">Chemical Eng.</p>
-                                        </a>
+                                            <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
+                                                <h7>Jake Nuesca</h7>
+                                                </a>
+                                                <p>Product Design</p>  
+                                                <p>Mechanical Eng.</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/aryannair">
+                                            <img src="../assets/img/pizza/icons/aryan.svg" alt="Aryan" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/aryannair">
+                                                <h7>Aryan Nair</h7>
+                                                </a>
+                                                <p>Community Engagement</p>  
+                                                <p>Chemical Eng.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mobile-team">
+                            <div class="team-container">
+                                <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/grace-lam-95789a62/">
+                                            <img src="../assets/img/pizza/icons/grace.svg" alt="Grace" />
+                                            <h7>Grace Lam</h7>
+                                            </a>
+                                        </div>
+                                        <div class="col-4">
+                                            <img src="../assets/img/pizza/icons/jasmine.svg" alt="Jasmine" />
+                                            <h7>Jasmine Chen</h7>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/neemarashidi/">
+                                            <img src="../assets/img/pizza/icons/neema.svg" alt="Neema" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/neemarashidi/">
+                                                <h7>Neema Rashidi</h7>
+                                            </a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/natalie-deng">
+                                            <img src="../assets/img/pizza/icons/natalie (1).svg" alt="Natalie" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/natalie-deng">
+                                                <h7>Natalie Deng</h7>
+                                            </a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
+                                            <img src="../assets/img/pizza/icons/jake.svg" alt="Jake" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/jake-nuesca-546965193/">
+                                                <h7>Jake Nuesca</h7>
+                                            </a>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/aryannair">
+                                            <img src="../assets/img/pizza/icons/aryan.svg" alt="Aryan" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/aryannair">
+                                                <h7>Aryan Nair</h7>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
