--- a/projects/groupsource.html
+++ b/projects/groupsource.html
@@ -124,55 +124,101 @@
                         id="team-header"><u style="border-bottom: 10px solid #99CCFF;">team</u></h3>
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
-                        <div class="team-container">
-                            <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
-                                <div class="row">
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
-                                        <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
-                                        </a>
-                                        <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
-                                            <h7>Isabella</h7> <p id="teaminfo">Dyc-O'Neal</p>
+                        <div class="web-team">
+                            <div class="team-container">
+                                <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                                    <div class="row">
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
+                                            <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
                                             </a>
-                                            <p id="teaminfo">Project Lead</p>  
-                                            <p id="teaminfo">Cognitive Science</p>
+                                            <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
+                                                <h7>Isabella Dyc-O'Neal</h7>
+                                                </a>
+                                                <p>Project Lead</p>  
+                                                <p>Cognitive Science</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
+                                            <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
+                                                <h7>Abhinav Subramaniam</h7>
+                                                </a>
+                                                <p>Business Strategy Developer</p>  
+                                                <p>Mechanical Engineering</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
+                                            <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
+                                                <h7>Laurel Nelson</h7>
+                                                </a>
+                                                <p>Business Strategy Developer</p>  
+                                                <p>Bioengineering</p>
+                                                </a>
+                                        </div>
+                                        <div class="col">
+                                            <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
+                                            <h7>Leo Gamboa</h7>
+                                            <p>Business Strategy Developer</p>  
+                                            <p>MCB & Political Science</p>
+                                        </div>
+                                        <div class="col">
+                                            <a href="https://www.linkedin.com/in/maya-chen-1099/">
+                                            <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/maya-chen-1099/">
+                                                <h7>Maya Chen</h7>
+                                                </a>
+                                                <p>User Interface Designer</p>  
+                                                <p>Cognitive Science</p>
+                                        </div>
                                     </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
-                                        <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
-                                        </a>
-                                        <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
-                                            <h7>Abhinav</h7> <p id="teaminfo">Subramaniam</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="mobile-team">
+                            <div class="team-container">
+                                <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
+                                    <div class="row">
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
+                                            <img src="../assets/img/groupsource/icons/isabella.svg" alt="Isabella" />
                                             </a>
-                                            <p id="teaminfo">Business Strategy Developer</p>  
-                                            <p id="teaminfo">Mechanical Engineering</p>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
-                                        <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
-                                        </a>
-                                        <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
-                                            <h7>Laurel</h7> <p id="teaminfo">Nelson</p>
+                                            <a href="https://www.linkedin.com/in/isabella-dyc-o-neal-484502135/">
+                                                <h7>Isabella Dyc-O'Neal</h7>
                                             </a>
-                                            <p id="teaminfo">Business Strategy Developer</p>  
-                                            <p id="teaminfo">Bioengineering</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
+                                            <img src="../assets/img/groupsource/icons/abhi.svg" alt="Abhinav" />
                                             </a>
-                                    </div>
-                                    <div class="col">
-                                        <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
-                                        <h7>Leo</h7> <p id="teaminfo">Gamboa</p>
-                                        <p id="teaminfo">Business Strategy Developer</p>  
-                                        <p id="teaminfo">MCB & Political Science</p>
-                                    </div>
-                                    <div class="col">
-                                        <a href="https://www.linkedin.com/in/maya-chen-1099/">
-                                        <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
-                                        </a>
-                                        <a href="https://www.linkedin.com/in/maya-chen-1099/">
-                                            <h7>Maya</h7> <p id="teaminfo">Chen</p>
+                                            <a href="https://www.linkedin.com/in/abhinav-subramaniam-709181154/">
+                                                <h7>Abhinav Subramaniam</h7>
                                             </a>
-                                            <p id="teaminfo">User Interface Designer</p>  
-                                            <p id="teaminfo">Cognitive Science</p>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
+                                            <img src="../assets/img/groupsource/icons/laurel.svg" alt="Laurel" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/laurel-nelson-10b572157/">
+                                                <h7>Laurel Nelson</h7>
+                                            </a>
+                                        </div>
+                                        <div class="col-4">
+                                            <img src="../assets/img/groupsource/icons/leo.svg" alt="Leo" />
+                                            <h7>Leo Gamboa</h7>
+                                        </div>
+                                        <div class="col-4">
+                                            <a href="https://www.linkedin.com/in/maya-chen-1099/">
+                                            <img src="../assets/img/groupsource/icons/maya.svg" alt="Maya" />
+                                            </a>
+                                            <a href="https://www.linkedin.com/in/maya-chen-1099/">
+                                                <h7>Maya Chen</h7>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
