netic last names

--- a/projects/netic.html
+++ b/projects/netic.html
@@ -156,7 +156,7 @@
                                 <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
                                   <img src="../assets/img/netic/people/philippa.svg" alt="philippa" />
                                   <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
-                                    <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
+                                    <h7>Philippa Steinberg</h7>
                                   </a>
                                     <p id="teaminfo">UI Designer</p>
                                     <p id="teaminfo">Freshman | Molecular & Cell Biology</p>
@@ -164,7 +164,7 @@
                               </div>
                               <div class="col">
                                   <img src="../assets/img/netic/people/reid.svg" alt="reid" />
-                                  <h7>Reid</h7> <p id="teaminfo">Johnson</p>
+                                  <h7>Reid Johnson</h7>
                                   <p id="teaminfo">Coding Consultant</p>
                                   <p id="teaminfo">Junior | Math + CompSci</p>
                               </div>
@@ -172,7 +172,7 @@
                                 <a href="https://www.linkedin.com/in/carlos-oriol/">
                                   <img src="../assets/img/netic/people/carlos.svg" alt="carlos" />
                                   <a href="https://www.linkedin.com/in/carlos-oriol/">
-                                    <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
+                                    <h7>Carlos Oriol</h7>
                                   </a>
                                     <p id="teaminfo">Design Consultant</p>
                                     <p id="teaminfo">Sophomore | Data Science</p>
@@ -191,7 +191,7 @@
                                   <img src="../assets/img/netic/people/anika.svg" alt="anika" />
                                 </a>
                                 <a href="https://www.linkedin.com/in/anika-singhania-b07b31179/">
-                                  <h7>Anika</h7> <p id="teaminfo">Singhania</p>
+                                  <h7>Anika Singhania</h7>
                                 </a>
                                 <p id="teaminfo">Project Lead</p>
                                 <p id="teaminfo">Freshman | CompSci</p>
@@ -200,7 +200,7 @@
                                 <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
                                   <img src="../assets/img/netic/people/allan.svg" alt="allan" />
                                   <a href="https://www.linkedin.com/in/allan-lee-22a0a614a/">
-                                    <h7>Allan</h7>  <p id="teaminfo">Lee</p>
+                                    <h7>Allan Lee</h7>
                                   </a>
                                     <p id="teaminfo">Design Consultant</p>
                                     <p id="teaminfo">Junior | BioE</p>
@@ -210,7 +210,7 @@
                                 <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
                                   <img src="../assets/img/netic/people/leilani.svg" alt="leilani" />
                                   <a href="https://www.linkedin.com/in/leilani-chu-342563130/">
-                                    <h7>Leilani</h7> <p id="teaminfo">Chu</p>
+                                    <h7>Leilani Chu</h7>
                                   </a>
                                     <p id="teaminfo">UI Designer</p>
                                     <p id="teaminfo">Senior | Molecular & Cell Biology</p>
@@ -220,7 +220,7 @@
                                 <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
                                   <img src="../assets/img/netic/people/philippa.svg" alt="philippa" />
                                   <a href="https://www.linkedin.com/in/philippa-steinberg-78aa031a1/">
-                                    <h7>Philippa</h7> <p id="teaminfo">Steinberg</p>
+                                    <h7>Philippa Steinberg</h7>
                                   </a>
                                     <p id="teaminfo">UI Designer</p>
                                     <p id="teaminfo">Freshman | Molecular & Cell Biology</p>
@@ -228,7 +228,7 @@
                               </div>
                               <div class="col-4">
                                   <img src="../assets/img/netic/people/reid.svg" alt="reid" />
-                                  <h7>Reid</h7> <p id="teaminfo">Johnson</p>
+                                  <h7>Reid Johnson</h7>
                                   <p id="teaminfo">Coding Consultant</p>
                                   <p id="teaminfo">Junior | Math + CompSci</p>
                               </div>
@@ -236,7 +236,7 @@
                                 <a href="https://www.linkedin.com/in/carlos-oriol/">
                                   <img src="../assets/img/netic/people/carlos.svg" alt="carlos" />
                                   <a href="https://www.linkedin.com/in/carlos-oriol/">
-                                    <h7>Carlos</h7> <p id="teaminfo"> Oriol</p>
+                                    <h7>Carlos Oriol</h7>
                                   </a>
                                     <p id="teaminfo">Design Consultant</p>
                                     <p id="teaminfo">Sophomore | Data Science</p>
