added disappearing job titles for people

--- a/projects/berkeley-student-food-collective.html
+++ b/projects/berkeley-student-food-collective.html
@@ -147,21 +147,21 @@
                                 <a href="https://www.linkedin.com/in/brendanshih/">
                                 <p>Brendan Shih</p>
                                 </a>
-                                <p>Project Lead</p>  
+                                <p id="teaminfo">Project Lead</p>  
                             </div>
                             <div class="col-3 text-center">
                                 <p>Katrina Gonzales</p>
-                                <p>Design Consultant</p>  
+                                <p id="teaminfo">Design Consultant</p>  
                             </div>
                             <div class="col-3 text-center">
                                 <p>Malena Kleiven</p>
-                                <p>Design Consultant</p> 
+                                <p id="teaminfo">Design Consultant</p> 
                             </div>
                             <div class="col-3 text-center">
                                 <a href="https://www.linkedin.com/in/manooshree-patel-894b82132/">
                                 <p>Manooshree Patel</p>
                                 </a>
-                                <p>Design Consultant</p> 
+                                <p id="teaminfo">Design Consultant</p> 
                             </div>
                         </div>
                     </div>
