fixed_alemany_team

--- a/projects/alemany-farms.html
+++ b/projects/alemany-farms.html
@@ -113,43 +113,43 @@
                         <a href="https://www.linkedin.com/in/kaylanh/">
                         <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
                         </a>
-                        <h7>Kaylan</h7> <p id="teaminfo">Huang</p>
+                        <h7>Kaylan Huang</h7>
                         </a>
-                        <p id="teaminfo">Project Lead</p>
-                        <p id="teaminfo">Senior | Economics</p>
+                        <p>Project Lead</p>
+                        <p>Senior | Economics</p>
                       </div>
                       <div class="col">
                         <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
                         <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
-                        <h7>Zeyad</h7> <p id="teaminfo">El-Arabaty</p>
+                        <h7>Zeyad El-Arabaty</h7>
                           </a>
-                          <p id="teaminfo">Project Lead</p>
-                          <p id="teaminfo">Senior | CompSci</p>
+                          <p>Project Lead</p>
+                          <p>Senior | CompSci</p>
                         </a>
                       </div>
                       <div class="col">
                         <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
                         <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
-                        <h7>Qianning</h7>  <p id="teaminfo">Tang</p>
+                        <h7>Qianning Tang</h7>
                           </a>
-                          <p id="teaminfo">Freshman | Sustanable Environmental Design</p>
+                          <p>Freshman | Sustanable Environmental Design</p>
                         </a>
                       </div>
                       <div class="col">
                         <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
                         <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
                         </a>
-                        <h7>Ryan</h7>  <p id="teaminfo">Yu</p>
+                        <h7>Ryan Yu</h7>
                       </a>
-                      <p id="teaminfo">Junior | Molecular and Cell Biology</p>
+                      <p>Junior | Molecular and Cell Biology</p>
                       </div>
                       <div class="col">
                         <a href="https://www.linkedin.com/in/shaantam/">
                         <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
                         <a href="https://www.linkedin.com/in/shaantam/">
-                          <h7>Shaantam</h7> <p id="teaminfo">Chawla</p>
+                          <h7>Shaantam Chawla</h7>
                           </a>
-                          <p id="teaminfo">Junior | EECS + Public Policy Minor</p>
+                          <p>Junior | EECS + Public Policy Minor</p>
                         </a>
                       </div>
                     </div>
@@ -160,35 +160,35 @@
                 <div class="team-container">
                   <div class="row d-flex flex-column flex-wrap flex-md-nowrap">
                     <div class="row">
-                      <div class="col-3">
+                      <div class="col-4">
                         <a href="https://www.linkedin.com/in/kaylanh/">
                         <img src="../assets/img/alemany/people/kaylan.svg" alt="kaylan" />
                         </a>
                         <h7>Kaylan Huang</h7>
                         </a>
                       </div>
-                      <div class="col-3">
+                      <div class="col-4">
                         <a href="https://www.linkedin.com/in/zeyad-el-arabaty-4a2b51148/">
                         <img src="../assets/img/alemany/people/zeyed.svg" alt="Zeyad" />
                         <h7>Zeyad El-Arabaty</h7>
                           </a>
                         </a>
                       </div>
-                      <div class="col-3">
+                      <div class="col-4">
                         <a href="https://www.linkedin.com/in/qianning-tang-7b257b17a/">
                         <img src="../assets/img/alemany/people/qianning.svg" alt="qianning" />
                         <h7>Qianning Tang</h7>
                           </a>
                         </a>
                       </div>
-                      <div class="col-3">
+                      <div class="col-4">
                         <a href="https://www.linkedin.com/in/ryan-yu-9730a5156/">
                         <img src="../assets/img/alemany/people/ryan.svg" alt="ryan" />
                         </a>
                         <h7>Ryan Yu</h7>
                       </a>
                       </div>
-                      <div class="col-3">
+                      <div class="col-4">
                         <a href="https://www.linkedin.com/in/shaantam/">
                         <img src="../assets/img/alemany/people/shaantam.svg" alt="shaantam" />
                         <a href="https://www.linkedin.com/in/shaantam/">
