added v1.5 styles and pages

--- a/projects/communitycafe.html
+++ b/projects/communitycafe.html
@@ -326,7 +326,7 @@
                     </div>
                     <div class="col-lg-9" style="font-style: normal;">
                         <h4 style="font-style:italic; padding-bottom: 3%;">How might we design a to-go box that expresses our brand identity?</h4>
-                        <h5 style="">Ideating</h5>
+                        <h5>Ideating</h5>
                         <p>
                             We started off by identifying everything we hated about current pizza boxes and brainstorming ways to reinvent how the pizza box is designed and used. We focused on ideas that would make our pizza box stand out, while being sustainable and eco-friendly.
                         </p>
