justified all text and right-aligned the OUR VALUES title

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -98,7 +98,7 @@
             <img src="aboutpic2.svg" alt="aboutpic2" />
         </div>
         <div class="column">
-            <h4>Our Values</h4>
+            <h4 id="values">Our Values</h4>
             <p> We are Invention Corps of Berkeley. As a collective, we are an interdisciplinary group of students driven to create
             meaningful global impact through human-centered design. We partner with people and organizations with the objective of
             creating tangible solutions in the realms of society, health, poverty, and the environment. </p>
@@ -135,9 +135,6 @@
             <img src="aboutpic3.svg" alt="aboutpic3" />
         </div>
     </div>
-
-
-
 
 
 
