fixed all the images

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -86,7 +86,7 @@
         </div>
         <div class="column">
             <div id = "pic">
-                <img src="aboutpic1.svg" alt="aboutpic1" />
+                <img src="aboutpic1.png" alt="aboutpic1" id="aboutpic" />
             </div>
         </div>
     </div>
@@ -95,7 +95,7 @@
 <!--Our VALUES section-->
     <div class="row">
         <div class="column">
-            <img src="aboutpic2.svg" alt="aboutpic2" />
+            <img src="aboutpic2.png" alt="aboutpic2" id="aboutpic" />
         </div>
         <div class="column">
             <h4 id="values">Our Values</h4>
@@ -132,7 +132,7 @@
             created a structure of interacting, free-form 'blobs'. </p>
         </div>
         <div class="column">
-            <img src="aboutpic3.svg" alt="aboutpic3" />
+            <img src="aboutpic3.png" alt="aboutpic3" id="aboutpic" />
         </div>
     </div>
 
