--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -85,17 +85,21 @@
             unique members, visually created as a representation of themselves and the color that represents them. </p>
         </div>
         <div class="column">
-            <div id = "pic">
+            <figure>
                 <img src="aboutpic1.png" alt="aboutpic1" id="aboutpic" />
-            </div>
+                <figcaption>Members Jasmine and Jeffrey facilitating our Spring 2020 recruitment workshop. </figcaption>
+            </figure>
         </div>
     </div>
 
 
 <!--Our VALUES section-->
     <div class="row">
-        <div class="column">
-            <img src="aboutpic2.png" alt="aboutpic2" id="aboutpic" />
+         <div class="column">
+            <figure>
+                <img src="aboutpic2.png" alt="aboutpic2" id="aboutpic" />
+                <figcaption>Member Abhinav brainstorming during our Spring 2020 recruitment workshop. </figcaption>
+            </figure>
         </div>
         <div class="column">
             <h4 id="values">Our Values</h4>
@@ -132,7 +136,10 @@
             created a structure of interacting, free-form 'blobs'. </p>
         </div>
         <div class="column">
-            <img src="aboutpic3.png" alt="aboutpic3" id="aboutpic" />
+            <figure>
+                <img src="aboutpic3.png" alt="aboutpic3" id="aboutpic" />
+                <figcaption>Senior members Iris, Tori, Zulaika, and Manooshree at our Spring 2020 recruitment workshop. </figcaption>
+            </figure>
         </div>
     </div>
 
