--- a/v1.5/projects.html
+++ b/v1.5/projects.html
@@ -80,6 +80,112 @@
     <!-- Custom Scripts -->
     <script src="../assets/js/script.js"></script>
     <script src="../assets/js/members.js"></script>
+    <div class="container">
+        <h2 id ="projects-header" class="jumptarget" style="padding-bottom: 3%;">Our Projects</h2>
+        <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Consequat nunc, enim libero varius purus, consectetur vel sem. </p> -->
+        <div class="container">
+            <div class="row">
+              <div class="col-6 col-sm-4">
+                <div style="padding-bottom: 10%;">
+                <a href="projects/alemany-farms.html">
+                    <img src="../assets/img/projthumbnails/alemany farm 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%" alt="Alemany Farm">
+                    <div class="proj-title">alemany farm</div>
+                </a>
+                </div>
+              </div>
+              <div class="col-6 col-sm-4">
+                <div style="padding-bottom: 10%;">
+                <a href="projects/communitycafe.html">
+                    <img src="../assets/img/projthumbnails/community cafe 3x2.png" class="project-tile" alt="Pizza with a Purpose" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                    <div class="proj-title">community cafe</div>
+                </a>
+                </div>
+              </div>
+              <div class="col-6 col-sm-4">
+                <div style="padding-bottom: 10%;">
+                <a href="projects/netic.html">
+                    <img src="../assets/img/projthumbnails/neomotion 3x2.png" class="project-tile" alt="NeoMotion AI" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                    <div class="proj-title">netic health</div>
+                </a>
+                </div>
+              </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/berkeley-student-food-collective.html">
+                        <img src="../assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        alt="Berkeley Student Food Collective">
+                        <div class="proj-title">berkeley student food collective</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/makerspace.html">
+                        <img src="../assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <div class="proj-title">moffitt makerspace</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/groupsource.html">
+                        <img src="../assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <div class="proj-title">groupsource</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/berkeley-student-food-collective.html">
+                        <img src="../assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        alt="Berkeley Student Food Collective">
+                        <div class="proj-title">berkeley student food collective</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/makerspace.html">
+                        <img src="../assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <div class="proj-title">moffitt makerspace</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/groupsource.html">
+                        <img src="../assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <div class="proj-title">groupsource</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/berkeley-student-food-collective.html">
+                        <img src="../assets/img/projthumbnails/bfc 3x2.png" class="project-tile" style="box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;"
+                        alt="Berkeley Student Food Collective">
+                        <div class="proj-title">berkeley student food collective</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/makerspace.html">
+                        <img src="../assets/img/projthumbnails/makerspace 3x2.png" class="project-tile" alt="Moffitt Makerspace" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <div class="proj-title">moffitt makerspace</div>
+                    </a>
+                    </div>
+                </div>
+                <div class="col-6 col-sm-4">
+                    <div style="padding-bottom: 10%;">
+                    <a href="projects/groupsource.html">
+                        <img src="../assets/img/projthumbnails/groupsource 3x2.png" class="project-tile" alt="groupsource" style=  "box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.14); width: 100%; height:100%;">
+                        <div class="proj-title">groupsource</div>
+                    </a>
+                    </div>
+                </div>
+            </div>
+          </div>
 </body>
 
 </html>
