--- a/v1.5/project.html
+++ b/v1.5/project.html
@@ -82,4 +82,7 @@
     <script src="../assets/js/members.js"></script>
 </body>
 
+<footer style="background-color: rgb(224, 107, 101); color: white; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the Invention Corps Web Dev Team<br>Copyright 2020 ©
+</footer>
+
 </html>
