changed footer, removed dev.

--- a/v1.5/about.html
+++ b/v1.5/about.html
@@ -166,7 +166,7 @@
     <script src="../assets/js/members.js"></script>
 </body>
 
-<footer style="background-color: rgb(224, 107, 101); color: white; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span style="font-color: white"> <a href="webdevteam.html"> </span> Invention Corps Web Dev Team </a><br>Copyright © 2020
+<footer style="background-color: rgb(224, 107, 101); color: white; padding: 20px; text-align: center; margin-top: 20px;">Made with ♥ by the <span style="font-color: white"> <a href="webdevteam.html"> </span> Invention Corps Web Team </a><br>Copyright © 2020
 </footer>
 
 </html>
